Fix distribution test race