@@ -18,6 +18,7 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.attribute.FileTime;
+import java.util.List;
 import java.util.concurrent.TimeUnit;
 
 import org.eclipse.jetty.client.ContentResponse;
@@ -46,10 +47,11 @@ public class DisableUrlCacheTest extends AbstractJettyHomeTest
         JettyHomeTester distribution = JettyHomeTester.Builder.newInstance()
             .jettyVersion(jettyVersion)
             .jettyBase(jettyBase)
+            .jvmArgs(List.of("-Dorg.eclipse.jetty.deploy.LEVEL=DEBUG"))
             .build();
 
         String[] setupArgs = {
-            "--add-to-start=http,ee10-webapp,ee10-deploy,disable-urlcache"
+            "--add-modules=http,ee10-webapp,ee10-deploy,disable-urlcache"
         };
 
         try (JettyHomeTester.Run setupRun = distribution.start(setupArgs))
@@ -100,11 +102,14 @@ public class DisableUrlCacheTest extends AbstractJettyHomeTest
                 run2.getLogs().clear();
                 touch(warXmlPath);
 
-                // Wait for reload
+                // Wait for reload to start context
                 assertTrue(run2.awaitConsoleLogsFor("Started oeje10w.WebAppContext@", START_TIMEOUT, TimeUnit.SECONDS));
+                // wait for deployer node to complete so context is Started not Starting
+                assertTrue(run2.awaitConsoleLogsFor("Executing Node Node[started]", START_TIMEOUT, TimeUnit.SECONDS));
 
                 // Is webapp still there?
                 response = client.GET("http://localhost:" + port + "/test/log/");
+
                 assertThat(response.getStatus(), is(HttpStatus.OK_200));
                 content = response.getContentAsString();
                 assertThat(content, containsString("GET at LogServlet"));
